--- a/src/hal-browser/index.html
+++ b/src/hal-browser/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>The HAL Browser</title>
-    <link rel="stylesheet" media="screen" href="./hal-browser/vendor/css/bootstrap.css" />
+    <link rel="stylesheet" media="screen" href="./vendor/css/bootstrap.css" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -12,8 +12,8 @@
         padding: 9px 0;
       }
     </style>
-    <link rel="stylesheet" media="screen" href="./hal-browser/vendor/css/bootstrap-responsive.css" />
-    <link rel="stylesheet" media="screen" href="./hal-browser/styles.css" />
+    <link rel="stylesheet" media="screen" href="./vendor/css/bootstrap-responsive.css" />
+    <link rel="stylesheet" media="screen" href="./styles.css" />
   </head>
 
   <body>
@@ -25,7 +25,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="#/" id="entryPointLink">Go To Entry Point</a></li>
-              <li><a href="https://github.com/mikekelly/hal-browser">About The HAL Browser</a></li>
+              <li><a href="https://github.com/mikekelly">About The HAL Browser</a></li>
             </ul>
           </div>
         </div>
@@ -201,40 +201,40 @@ Content-Type: application/json
     </div>
   </script>
 
-  <script src="./hal-browser/vendor/js/jquery-1.10.2.min.js"></script>
-  <script src="./hal-browser/vendor/js/underscore.js"></script>
-  <script src="./hal-browser/vendor/js/backbone.js"></script>
-  <script src="./hal-browser/vendor/js/uritemplates.js"></script>
-  <script src="./hal-browser/vendor/js/bootstrap.js"></script>
+  <script src="./vendor/js/jquery-1.10.2.min.js"></script>
+  <script src="./vendor/js/underscore.js"></script>
+  <script src="./vendor/js/backbone.js"></script>
+  <script src="./vendor/js/uritemplates.js"></script>
+  <script src="./vendor/js/bootstrap.js"></script>
 
-  <script src="./hal-browser/js/hal.js"></script>
-  <script src="./hal-browser/js/hal/browser.js"></script>
+  <script src="./js/hal.js"></script>
+  <script src="./js/hal/browser.js"></script>
 
-  <script src="./hal-browser/js/hal/http/client.js"></script>
-  <script src="./hal-browser/js/hal/resource.js"></script>
+  <script src="./js/hal/http/client.js"></script>
+  <script src="./js/hal/resource.js"></script>
 
-  <script src="./hal-browser/js/hal/views/browser.js"></script>
-  <script src="./hal-browser/js/hal/views/explorer.js"></script>
-  <script src="./hal-browser/js/hal/views/inspector.js"></script>
+  <script src="./js/hal/views/browser.js"></script>
+  <script src="./js/hal/views/explorer.js"></script>
+  <script src="./js/hal/views/inspector.js"></script>
 
-  <script src="./hal-browser/js/hal/views/navigation.js"></script>
-  <script src="./hal-browser/js/hal/views/location_bar.js"></script>
-  <script src="./hal-browser/js/hal/views/request_headers.js"></script>
+  <script src="./js/hal/views/navigation.js"></script>
+  <script src="./js/hal/views/location_bar.js"></script>
+  <script src="./js/hal/views/request_headers.js"></script>
 
-  <script src="./hal-browser/js/hal/views/resource.js"></script>
-  <script src="./hal-browser/js/hal/views/properties.js"></script>
-  <script src="./hal-browser/js/hal/views/links.js"></script>
-  <script src="./hal-browser/js/hal/views/embedded_resources.js"></script>
-  <script src="./hal-browser/js/hal/views/embedded_resource.js"></script>
+  <script src="./js/hal/views/resource.js"></script>
+  <script src="./js/hal/views/properties.js"></script>
+  <script src="./js/hal/views/links.js"></script>
+  <script src="./js/hal/views/embedded_resources.js"></script>
+  <script src="./js/hal/views/embedded_resource.js"></script>
 
-  <script src="./hal-browser/js/hal/views/non_safe_request_dialog.js"></script>
-  <script src="./hal-browser/js/hal/views/query_uri_dialog.js"></script>
+  <script src="./js/hal/views/non_safe_request_dialog.js"></script>
+  <script src="./js/hal/views/query_uri_dialog.js"></script>
 
-  <script src="./hal-browser/js/hal/views/response.js"></script>
-  <script src="./hal-browser/js/hal/views/response_headers.js"></script>
-  <script src="./hal-browser/js/hal/views/response_body.js"></script>
+  <script src="./js/hal/views/response.js"></script>
+  <script src="./js/hal/views/response_headers.js"></script>
+  <script src="./js/hal/views/response_body.js"></script>
 
-  <script src="./hal-browser/js/hal/views/documentation.js"></script>
+  <script src="./js/hal/views/documentation.js"></script>
 
   <script>
     var browser = new HAL.Browser({
