--- a/hal-browser/index.html
+++ b/hal-browser/index.html
@@ -64,21 +64,28 @@
               <td><strong><%= HAL.truncateIfUrl(rel) %></strong></td>
               <td><%= link.title || '' %></td>
               <td><%= link.name ? 'name: ' + link.name : 'index: ' + i %></a></td>
+
               <td>
               <% if (HAL.isUrl(rel)) { %>
                 <a class="dox" href="<%= HAL.buildUrl(rel) %>"><i class="icon-book"></i></a>
               <% } %>
               </td>
+
               <td>
-                <% if (link.templated === true) { %>
-                  <a class="query btn btn-success" href="<%= link.href %>" title="Query URI template"><i class="icon-question-sign"></i></a>
+              <% if (obj.method === undefined) { %>
+                <% if (obj.templated === true) { %>
+                  <a class="query btn btn-success" href="<%= obj.href %>" title="Query URI template"><i class="icon-question-sign"></i></a>
                 <% } else { %>
-                  <a class="follow btn btn-success" href="<%= link.href %>" title="Follow link"><i class="icon-arrow-right"></i></a>
+                  <a class="follow btn btn-success" href="<%= obj.href %>" title="Follow link"><i class="icon-arrow-right"></i></a>
+                <% } %>
+              <% } %>
+              </td>
+
+              <td>
+                <% if (obj.method !== undefined) { %>
+                  <a class="non-get btn btn-warning" href="<%= link.href %>" title="Perform non-GET request"><%= rel %></a>
                 <% } %>
               </td>
-              <td>
-              <a class="non-get btn btn-warning" href="<%= link.href %>" title="Perform non-GET request"><%= rel %></a>
-            </td>
             </tr>
           <% }); %>
         <% } else { %>
@@ -86,20 +93,27 @@
             <td><strong><%= HAL.truncateIfUrl(rel) %></strong></td>
             <td><%= obj.title || '' %></td>
             <td><%= obj.name || '' %></td>
+
             <td>
             <% if (HAL.isUrl(rel)) { %>
               <a class="dox" href="<%= HAL.buildUrl(rel) %>"><i class="icon-book"></i></a>
             <% } %>
             </td>
+
             <td>
-              <% if (obj.templated === true) { %>
-                <a class="query btn btn-success" href="<%= obj.href %>" title="Query URI template"><i class="icon-question-sign"></i></a>
-              <% } else { %>
-                <a class="follow btn btn-success" href="<%= obj.href %>" title="Follow link"><i class="icon-arrow-right"></i></a>
+              <% if (obj.method === undefined) { %>
+                <% if (obj.templated === true) { %>
+                  <a class="query btn btn-success" href="<%= obj.href %>" title="Query URI template"><i class="icon-question-sign"></i></a>
+                <% } else { %>
+                  <a class="follow btn btn-success" href="<%= obj.href %>" title="Follow link"><i class="icon-arrow-right"></i></a>
+                <% } %>
               <% } %>
             </td>
+
             <td>
-              <a class="non-get btn btn-warning" href="<%= obj.href %>" title="Perform non-GET request"><%= rel %></a>
+              <% if (obj.method !== undefined) { %>
+                <a class="non-get btn btn-warning" href="<%= obj.href %>" title="non-GET request"><%= rel %></a>
+              <% } %>
             </td>
           </tr>
         <% } %>
