--- a/hal-browser/index.html
+++ b/hal-browser/index.html
@@ -129,9 +129,7 @@
 
   <script id="response-headers-template" type="text/template">
     <h2>Response Headers</h2>
-    <pre><%= status.code %> <%= status.text %>
-
-<%= headers %></pre>
+    <pre><%= status.code %> <%= status.text %><%= headers %></pre>
   </script>
 
   <script id="response-body-template" type="text/template">
