--- a/examples/apple-farm/hal-browser/index.html
+++ b/examples/apple-farm/hal-browser/index.html
@@ -36,89 +36,37 @@
   <script id="location-bar-template" type="text/template">
 <form>
     <div class="input-append span12 location-bar-container">
-      <input class="span11" id="appendedInputButton" type="text" value="<%= url %>">
+      <input class="span11" id="appendedInputButton" type="text" value="<%= url %>" autofocus>
       <button class="btn" type="submit">Go!</button>
        <span class="ajax-loader"></span>
     </div>
 </form>
   </script>
 
+  <script id="embedded-resources-template" type="text/template">
+  </script>
+
   <script id="links-template" type="text/template">
-    <h2>Links</h2>
     <table class="table">
-      <thead>
-        <tr>
-          <th>rel</th>
-          <th>title</th>
-          <th>name / index</th>
-          <th>docs</th>
-          <th>method</th>
-        </tr>
-      </thead>
       <tbody>
+      <tr>
       <% _.each(links, function(obj, rel) { %>
-        <% if ($.isArray(obj)) { %>
-          <% _.each(obj, function(link, i) { %>
-            <tr>
-              <td><strong><%= HAL.truncateIfUrl(rel) %></strong></td>
-              <td><%= link.title || '' %></td>
-              <td><%= link.name ? 'name: ' + link.name : 'index: ' + i %></a></td>
-
-              <td>
-              <% if (HAL.isUrl(rel)) { %>
-                <a class="dox" href="<%= HAL.buildUrl(rel) %>"><i class="icon-book"></i></a>
-              <% } %>
-              </td>
-
-              <% if (obj.method === undefined) { %>
-                <td>
-                <% if (obj.templated === true) { %>
-                  <a class="query btn btn-success" href="<%= obj.href %>">query</a>
-                <% } else { %>
-                  <a class="follow btn btn-success" href="<%= obj.href %>">get</a>
-                <% } %>
-                </td>
-              <% } else { %>
-                <td>
-                  <a class="non-get btn btn-warning" href="<%= obj.href %>"><%= link.method.toLowerCase() %></a>
-                </td>
-              <% } %>
-            </tr>
-          <% }); %>
-        <% } else { %>
-          <tr>
-            <td><strong><%= HAL.truncateIfUrl(rel) %></strong></td>
-            <td><%= obj.title || '' %></td>
-            <td><%= obj.name || '' %></td>
-
-            <td>
-            <% if (HAL.isUrl(rel)) { %>
-              <a class="dox" href="<%= HAL.buildUrl(rel) %>"><i class="icon-book"></i></a>
-            <% } %>
-            </td>
-
-            <% if (obj.method === undefined) { %>
-              <td>
-              <% if (obj.templated === true) { %>
-                <a class="query btn btn-success" href="<%= obj.href %>">query</a>
-              <% } else { %>
-                <a class="follow btn btn-success" href="<%= obj.href %>">get</a>
-              <% } %>
-              </td>
-            <% } else { %>
-              <td>
-                <a class="non-get btn btn-warning" href="<%= obj.href %>" method="<%= obj.method %>"><%= obj.method.toLowerCase() %></a>
-              </td>
-            <% } %>
-          </tr>
-        <% } %>
+        <td>
+          <% if (obj.method === undefined) { %>
+            <a class="follow btn btn-success" href="<%= obj.href %>" method="GET"><%= HAL.truncateIfUrl(rel) %></a>
+          <% } else { %>
+            <a class="non-get btn btn-warning" href="<%= obj.href %>" method="<%= obj.method %>"><%= HAL.truncateIfUrl(rel) %></a>
+          <% } %>
+        </td>
       <% }) %>
+      </tr>
       </tbody>
     </table>
   </script>
 
   <script id="properties-template" type="text/template">
-    <h2>Properties</h2>
+    </br>
+    </br>
     <pre><%= _.escape(JSON.stringify(properties, null, HAL.jsonIndent)) %></pre>
   </script>
 
@@ -185,10 +133,6 @@
         <button type="submit" class="btn btn-primary">Make Request</button>
       </div>
     </form>
-  </script>
-
-  <script id="embedded-resources-template" type="text/template">
-    <h2>Embedded Resources</h2>
   </script>
 
   <script id="embedded-resource-template" type="text/template">
