--- a/hal-browser/index.html
+++ b/hal-browser/index.html
@@ -118,7 +118,7 @@
         <p>Method:</p>
         <input name="method" type="text" class="method" value="<%= method %>" />
         <p>Headers:</p>
-        <input name="headers" type="text" class="headers" value="Content-Type: application/json" />
+        <input name="headers" type="text" class="headers" value="Content-Type: application/hal+json" />
         <p>Body:</p>
 <textarea name="body" class="body" style="height: 200px">
 {
